force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_M__c.field-meta.xml
<CustomField>
    <fullName>Account_M__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Manager</label>
    <length>128</length>
    <type>Text</type>
</CustomField>