force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_Manager_user__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>