force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_Threats__c.field-meta.xml
<CustomField>
    <fullName>Account_Threats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>