force-app/main/default/objects/Strategic_Account_Plan__c/fields/Business_Dev_Quarter_3__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Quarter_3__c</fullName>
    <description>Quarter 3 field for Business Development &amp; Marketing Activity section</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarter 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>