force-app/main/default/objects/Strategic_Account_Plan__c/fields/Business_Overview__c.field-meta.xml
<CustomField>
    <fullName>Business_Overview__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>