force-app/main/default/objects/Strategic_Account_Plan__c/fields/Chairman_s_Lounge_Members__c.field-meta.xml
<CustomField>
    <fullName>Chairman_s_Lounge_Members__c</fullName>
    <formula>TEXT(Account__r.Chairmans_Lounge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chairman&apos;s Lounge Members</label>
    <type>Text</type>
</CustomField>