force-app/main/default/objects/Strategic_Account_Plan__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>