force-app/main/default/objects/Strategic_Account_Plan__c/fields/Operational_Act_Quarter_4__c.field-meta.xml
<CustomField>
    <fullName>Operational_Act_Quarter_4__c</fullName>
    <description>Quarter 4 field for Operational Activity section</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarter 4 Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>