force-app/main/default/objects/Strategic_Account_Plan__c/fields/Operational_Qantas__c.field-meta.xml
<CustomField>
    <fullName>Operational_Qantas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operational (Qantas)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>