force-app/main/default/objects/Strategic_Account_Plan__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select plan end date</inlineHelpText>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>