force-app/main/default/objects/Strategic_Account_Plan__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select initial start plan date. Update everytime plan is updated.</inlineHelpText>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>