force-app/main/default/objects/Strategic_Account_Plan__c/fields/QF_Strengths__c.field-meta.xml
<CustomField>
    <fullName>QF_Strengths__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QF Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>