force-app/main/default/objects/Strategic_Account_Plan__c/fields/QF_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>QF_Weaknesses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QF Weaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>