force-app/main/default/objects/Strategic_Account_Plan__c/fields/Quarter_4_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Quarter_4_Picklist__c</fullName>
    <description>This field is for users to select the relevant quarter 4 for the SAP.</description>
    <label>Quarter 4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan-Mar</fullName>
            </value>
            <value>
                <fullName>Apr-Jun</fullName>
            </value>
            <value>
                <fullName>Jul-Sep</fullName>
            </value>
            <value>
                <fullName>Oct-Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>