force-app/main/default/objects/Strategic_Account_Plan__c/fields/quest_acc_plan_id__c.field-meta.xml
<CustomField>
    <fullName>quest_acc_plan_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>quest acc plan id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>