force-app/main/default/objects/Strategic_Account_Plan__c/fields/quest_template_id__c.field-meta.xml
<CustomField>
    <fullName>quest_template_id__c</fullName>
    <externalId>true</externalId>
    <label>quest template id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>