force-app/main/default/objects/Strategic_Account_Plan__c/fields/Review_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Review_Cycle__c</fullName>
    <description>To be used to capture the review cycle of a SAP</description>
    <label>Review Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Tri-annually</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>