force-app/main/default/objects/Strategic_Account_Plan__c/fields/SAP_Active_and_Update_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>SAP_Active_and_Update_Last_3_Months__c</fullName>
    <description>Used for report - If SAP = Active and updated last 3 months, return 1.</description>
    <formula>IF ( AND ( ISPICKVAL (  Status__c , &quot;Active&quot;) ,   Last_Update__c = &quot;Less than 3 Months&quot;),1,0)</formula>
    <label>SAP Active and Update Last 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>