force-app/main/default/objects/Strategic_Account_Plan__c/fields/SAP_Created_and_Active__c.field-meta.xml
<CustomField>
    <fullName>SAP_Created_and_Active__c</fullName>
    <description>Account Owner = SAP Created By and SAP Status = Active. Used for Reporting</description>
    <formula>IF (   ISPICKVAL ( Status__c , &quot;Active&quot;) , &quot;Yes&quot; , &quot;No&quot;)</formula>
    <label>SAP Created and Active?</label>
    <type>Text</type>
</CustomField>