force-app/main/default/objects/Strategic_Account_Plan__c/fields/SAP_Created_by_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>SAP_Created_by_Account_Manager__c</fullName>
    <description>For Reporting, to check whether SAP has been created by Account Owner.</description>
    <formula>IF ( AND  ( Account__r.OwnerId =  CreatedBy.Id , ISPICKVAL (  Status__c , &quot;Active&quot;)) , &quot;SAP Created&quot; , &quot;No SAP Created&quot;)</formula>
    <label>SAP Created by Account Manager</label>
    <type>Text</type>
</CustomField>