force-app/main/default/objects/Strategic_Account_Plan__c/fields/Senior_Management_Qantas__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management_Qantas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Senior Management (Qantas)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>