force-app/main/default/objects/Strategic_Account_Plan__c/fields/Travel_Bookers_Qantas__c.field-meta.xml
<CustomField>
    <fullName>Travel_Bookers_Qantas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Bookers (Qantas)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>