force-app/main/default/objects/Strategic_Account_Plan__c/fields/Travellers_Qantas__c.field-meta.xml
<CustomField>
    <fullName>Travellers_Qantas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travellers (Qantas)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>