force-app/main/default/objects/Strategic_Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Chairman_s_Lounge_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>