force-app/main/default/objects/Strategic_Account_Plan__c/listViews/My_Active_Strategic_Account_Plan.listView-meta.xml
<ListView>
    <fullName>My_Active_Strategic_Account_Plan</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>Plan_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Active Strategic Account Plan</label>
</ListView>